--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "stougeiro/container-contract": "0.1.0"
     }
 }
